--- a/vignettes/Rcpi.css
+++ b/vignettes/Rcpi.css
@@ -5,7 +5,7 @@ body {
     overflow: visible;
     padding-left: 2em;
     padding-right: 2em;
-    font-family: "TiemposText", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Alegreya Sans", "Palatino Linotype", "Book Antiqua", Palatino, serif;
     font-size: 16px;
     line-height: 1.35;
 }
