--- a/vignettes/Rcpi.css
+++ b/vignettes/Rcpi.css
@@ -7,8 +7,8 @@ body {
     padding-right: 2em;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     font-size: 16px;
+    line-height: 24px;
     color: #333;
-    line-height: 1.4;
 }
 
 h1.title {
